# rust-samples-rocket-restful

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASES.md  Rocket.toml  codecov.yml  compose.yaml  players.json  rust-toolchain.toml
.claude/: settings.json
.claude/commands/: pre-commit.md  pre-release.md  precommit.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  rust-cd.yml  rust-ci.yml  rust.yml
adr/: 0002-four-layer-architecture.md  0003-diesel-r2d2-bundled-sqlite.md  0004-uuid-surrogate-squad-number-natural-key.md  0006-embed-migrations-startup-schema.md  README.md
docs/adr/: 0001-adopt-rocket-as-rest-api-framework.md  0005-full-replace-put-no-patch.md  0007-integration-only-test-strategy.md  0008-docker-compose-strategy.md  0009-ballon-dor-themed-versioning.md  0010-ai-assisted-development-workflow.md  0011-spec-driven-development.md  README.md  template.md
migrations/20260407000001_create_players/: up.sql
migrations/20260407000002_seed_starting_xi/: down.sql  up.sql
migrations/20260407000003_seed_substitutes/: down.sql  up.sql
rest/: players.rest
scripts/: entrypoint.sh
src/: lib.rs  main.rs  schema.rs
src/models/: mod.rs  player.rs
src/repositories/: mod.rs  player_repository.rs
src/routes/: health.rs  mod.rs  players.rs
src/services/: mod.rs  player_service.rs
src/state/: mod.rs  player_collection.rs
storage/: players-sqlite3.db
tests/: concurrency_tests.rs  player_routes_tests.rs  player_service_tests.rs
tests/common/: mod.rs
