[package]
name = "rust-samples-rocket-restful"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
diesel = { version = "2.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.3"
libsqlite3-sys = { version = "0.36", features = ["bundled"] }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
schemars     = { version = "1.2" }

[profile.release]
lto           = true   # link-time optimisation — reduces binary size and improves inlining
codegen-units = 1      # single codegen unit — required for full LTO
strip         = true   # strip debug symbols (Rust 1.59+)
panic         = "abort" # remove unwinding machinery — smaller binary, faster panics
